--- a/education.html
+++ b/education.html
@@ -40,7 +40,7 @@
       <!-- Intermediate -->
       <div class="education-card">
         <h3>Intermediate (Pre-Engineering)</h3>
-        <p><strong>College:</strong> Pins College Lodhran</p>
+        <p><strong>BISE Multan</p>
         <p><strong>Years:</strong> 2017 - 2019</p>
         <p><strong>Marks:</strong> 819 / 1100</p>
       </div>
@@ -48,7 +48,7 @@
       <!-- Matriculation -->
       <div class="education-card">
         <h3>Matriculation (Science)</h3>
-        <p><strong>School:</strong> Pins School Lodhran</p>
+        <p><strong>BISE Multan</p>
         <p><strong>Years:</strong> 2015 - 2017</p>
         <p><strong>Marks:</strong> 924 / 1100</p>
       </div>
@@ -62,3 +62,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
