--- a/contact.html
+++ b/contact.html
@@ -89,7 +89,7 @@
 
   <section class="page-section">
     <h2>Contact Me</h2>
-    <p>Reach out to me via email or follow me on social media:</p>
+    <p>Reach out to me via email or linkedin:</p>
 
     <div class="contact-grid">
       
@@ -133,4 +133,5 @@
 
 </body>
 </html>
+
 
