--- a/contact.html
+++ b/contact.html
@@ -89,7 +89,7 @@
 
   <section class="page-section">
     <h2>Contact Me</h2>
-    <p>Reach out to me via email or linkedin:</p>
+    <p>Contact me anytime through email or LinkedIn.</p>
 
     <div class="contact-grid">
       
@@ -133,5 +133,6 @@
 
 </body>
 </html>
+
 
 
