--- a/contact.html
+++ b/contact.html
@@ -89,7 +89,8 @@
 
   <section class="page-section">
     <h2>Contact Me</h2>
-    <p>Contact me anytime through email or LinkedIn.</p>
+    <p>Looking for exciting opportunities — reach out via email or connect on LinkedIn.</p>
+
 
     <div class="contact-grid">
       
@@ -133,6 +134,7 @@
 
 </body>
 </html>
+
 
 
 
