--- a/about.html
+++ b/about.html
@@ -25,16 +25,20 @@
 
   <section class="page-section">
     <h2>About Me</h2>
-<p>Driven and passionate <strong>Information Technology graduate</strong> with a strong foundation in 
-<strong>lead generation</strong>, <strong>data management</strong>, and <strong>teaching</strong>. Proficient in 
-<strong>HTML</strong>, <strong>CSS</strong>, and <strong>Java</strong>, with expertise in building 
-<strong>responsive, user-friendly front-end websites</strong> that combine functionality with modern, sleek design.</p>
+<p>Motivated and <strong>goal-oriented professional</strong> with a strong background in 
+<strong>computer operations</strong>, <strong>IT skills</strong>, and 
+<strong>data handling</strong>. Experienced in 
+<strong>lead generation</strong>, <strong>online research</strong>, and 
+<strong>data collection</strong>, with proven ability to manage accurate records using 
+<strong>MS Office</strong> and modern <strong>digital tools</strong>.</p>
 
-<p>Highly <strong>detail-oriented</strong> and <strong>organized</strong>, with excellent 
-<strong>communication</strong> and <strong>time management</strong> skills. Eager to contribute to a 
-dynamic team as a <strong>Data Entry Specialist</strong>, <strong>Virtual Assistant</strong>, or 
-<strong>Front-End Developer</strong>, while continuously <strong>growing professionally</strong> and 
-pushing the boundaries of innovation in the <strong>tech industry</strong>.</p>
+<p>Highly <strong>detail-oriented</strong> and <strong>organized</strong>, with effective 
+<strong>communication</strong> and documentation skills. Passionate about contributing to a 
+<strong>well-reputed organization</strong> as a <strong>Data Entry Specialist</strong>, 
+<strong>Virtual Assistant</strong>, or related role, while achieving 
+<strong>continuous professional growth</strong> and delivering meaningful value toward 
+<strong>organizational success</strong>.</p>
+
 </section>
 
   <footer>
@@ -43,3 +47,4 @@ pushing the boundaries of innovation in the <strong>tech industry</strong>.</p>
   <script src="script.js"></script>
 </body>
 </html>
+
