--- a/about.html
+++ b/about.html
@@ -25,19 +25,26 @@
 
   <section class="page-section">
     <h2>About Me</h2>
-<p>Motivated and <strong>goal-oriented professional</strong> with a strong background in 
-<strong>computer operations</strong>, <strong>IT skills</strong>, and 
-<strong>data handling</strong>. Experienced in 
-<strong>lead generation</strong>, <strong>online research</strong>, and 
-<strong>data collection</strong>, with proven ability to manage accurate records using 
-<strong>MS Office</strong> and modern <strong>digital tools</strong>.</p>
+<p>
+A <strong>dedicated and goal-oriented professional</strong> with strong 
+<strong>computer and IT skills</strong> and effective 
+<strong>communication abilities</strong>. Possesses hands-on experience in 
+<strong>lead generation</strong>, <strong>online research</strong>, 
+<strong>data collection</strong>, and accurate 
+<strong>data handling</strong> using <strong>MS Office</strong> and 
+<strong>digital tools</strong>.
+</p>
 
-<p>Highly <strong>detail-oriented</strong> and <strong>organized</strong>, with effective 
-<strong>communication</strong> and documentation skills. Passionate about contributing to a 
-<strong>well-reputed organization</strong> as a <strong>Data Entry Specialist</strong>, 
-<strong>Virtual Assistant</strong>, or related role, while achieving 
-<strong>continuous professional growth</strong> and delivering meaningful value toward 
-<strong>organizational success</strong>.</p>
+<p>
+Comfortable working with <strong>documentation</strong>, 
+<strong>reports</strong>, and <strong>organized records</strong> while maintaining 
+<strong>attention to detail</strong> and <strong>accuracy</strong>. Highly motivated to work in a 
+<strong>well-reputed organization</strong> where skills can be utilized efficiently, 
+<strong>continuous professional growth</strong> can be achieved, and 
+<strong>meaningful contributions</strong> can be made toward 
+<strong>organizational success</strong>.
+</p>
+
 
 </section>
 
@@ -47,4 +54,5 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
