--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <section class="hero">
     <div>
       <h1>Hi, I'm <span>Esha Ishfaq</span></h1>
-      <p>Bachelor of Science in Information Technology| Front-End Developer | Lead Generation & Data Management Specialist | Virtual Assistant</p>
+      <p>IT Graduate | Lead Generation & Data Management Specialist | Computer & Communication Skills</p>
       <a href="portfolio.html" class="btn primary">View My Work</a>
          <a href="#" class="btn secondary" onclick="generateCV()">Download CV</a>
     </div>
@@ -217,3 +217,4 @@
 
 </body>
 </html>
+
