--- a/portfolio.html
+++ b/portfolio.html
@@ -38,19 +38,19 @@
     <div class="certificates-grid">
       <div class="certificate-card">
         <h3>Front-End Development</h3>
-        <p>HTML, CSS, Java</p>
+        <p>HTML, CSS (Basic Level), Responsive Layouts</p>
       </div>
       <div class="certificate-card">
-        <h3>Digital Marketing</h3>
-        <p>Lead Generation, SEO, Social Media Strategy</p>
+        <h3>Lead Generation & Data Management<</h3>
+        <p>Online Research, Lead Generation, Data Entry, LinkedIn Research</p>
       </div>
       <div class="certificate-card">
-        <h3>Professional Skills</h3>
-        <p>Time Management, Adaptability, Teaching</p>
+        <h3>Computer & IT Skills</h3>
+        <p>MS Word, MS Excel, MS PowerPoint, AI-Assisted Tools, Email & Internet Handling</p>
       </div>
       <div class="certificate-card">
-        <h3>Soft Skills</h3>
-        <p>Communication, Teamwork, Problem Solving</p>
+        <h3>Communication & Soft Skills</h3>
+        <p>Communication, Teamwork, Time Management, Problem Solving, Adaptability</p>
       </div>
     </div>
   </section>
@@ -279,3 +279,4 @@ let y = 20; // Starting Y position
 
 </body>
 </html>
+
