--- a/portfolio.html
+++ b/portfolio.html
@@ -62,20 +62,20 @@
 
     <div class="certificates-grid">
       <div class="certificate-card">
-        <h3>Web Design</h3>
-        <p>I love creating visually appealing and user-friendly website designs.</p>
+        <h3>Web & Digital Technologies</h3>
+        <p>Interested in web design and digital tools to support business operations and improve efficiency.</p>
       </div>
       <div class="certificate-card">
-        <h3>Technology & Innovation</h3>
-        <p>Passionate about learning new technologies and applying them to solve problems.</p>
+        <h3>Technology & Process Improvement</h3>
+        <p>Motivated to learn new technologies and apply them to improve workflows and productivity.</p>
       </div>
       <div class="certificate-card">
-        <h3>Teaching & Mentoring</h3>
-        <p>Enjoy sharing knowledge and helping others grow through teaching.</p>
+        <h3>Training, Teaching & Knowledge Sharing</h3>
+        <p>Passionate about guiding others, supporting learning, and contributing to team development.</p>
       </div>
       <div class="certificate-card">
-        <h3>Digital Marketing Trends</h3>
-        <p>Interested in modern marketing strategies and online growth techniques.</p>
+        <h3>Digital Research & Market Insights</h3>
+        <p>Interested in online research, data trends, and digital strategies that support business growth.</p>
       </div>
     </div>
   </section>
@@ -279,4 +279,5 @@ let y = 20; // Starting Y position
 
 </body>
 </html>
+
 
