--- a/portfolio.html
+++ b/portfolio.html
@@ -41,7 +41,7 @@
         <p>HTML, CSS (Basic Level), Responsive Layouts</p>
       </div>
       <div class="certificate-card">
-        <h3>Lead Generation & Data Management<</h3>
+        <h3>Lead Generation & Data Management</h3>
         <p>Online Research, Lead Generation, Data Entry, LinkedIn Research</p>
       </div>
       <div class="certificate-card">
@@ -84,9 +84,7 @@
   <section class="page-section">
     <h2>My Career Goals</h2>
     <p class="goal-text">
-      My goal is to work in a dynamic organization where I can apply my technical expertise,
-      continue learning, and contribute to innovative projects. I aim to grow as a professional
-      and make a meaningful impact through technology.
+      My goal is to work in a dynamic and well-reputed organization where I can apply my technical and computer skills, continue learning, and support innovative and efficient work processes. I aim to grow professionally, enhance my expertise, and make a meaningful contribution to organizational success through technology and teamwork.
     </p>
   </section>
 
@@ -279,5 +277,6 @@ let y = 20; // Starting Y position
 
 </body>
 </html>
+
 
 
