--- a/contact.html
+++ b/contact.html
@@ -113,7 +113,7 @@
     e.preventDefault(); // Prevent default link behavior
 
     // Your email address
-    const email = "eshaishfaq.it@gmail.com";
+    const email = "eshaishfaq01@gmail.com";
     
     // Compose window link for Gmail
     const gmailLink = `https://mail.google.com/mail/u/0/?view=cm&fs=1&tf=1&to=${email}`;
@@ -134,6 +134,7 @@
 
 </body>
 </html>
+
 
 
 
