--- a/index.html
+++ b/index.html
@@ -40,12 +40,12 @@
   <footer>
     <p>© 2025 Esha Ishfaq. All rights reserved.</p>
   </footer>
-  <script>
-  function generateCV() {
+<script>
+function generateCV() {
   const { jsPDF } = window.jspdf;
   const doc = new jsPDF();
 
-  let y = 20; // Starting Y position
+  let y = 20;
 
   doc.setFont("helvetica", "bold");
   doc.setFontSize(18);
@@ -54,7 +54,7 @@
 
   doc.setFont("helvetica", "normal");
   doc.setFontSize(12);
-  const headline = "Bachelor of Science in Information Technology (BSIT) | Front-End Developer | Lead Generation & Data Management Specialist | Virtual Assistant";
+  const headline = "BS Information Technology Graduate | Lead Generation & Data Entry Executive | Computer & IT Skills Professional";
   doc.text(doc.splitTextToSize(headline, 170), 20, y);
   y += 20;
 
@@ -66,10 +66,10 @@
 
   doc.setFont("helvetica", "normal");
   doc.setFontSize(12);
-  const aboutMe = "Driven and passionate Information Technology graduate with a strong foundation in lead generation, data management, and teaching. Proficient in HTML, CSS, and Java, with expertise in building responsive, user-friendly front-end websites that combine functionality with modern, sleek design.\n\nHighly detail-oriented and organized, with excellent communication and time management skills. Eager to contribute to a dynamic team as a Data Entry Specialist, Virtual Assistant, or Front-End Developer, while continuously growing professionally and pushing the boundaries of innovation in the tech industry.";
+  const aboutMe = "A dedicated and goal-oriented Information Technology graduate with strong computer and IT skills and effective communication abilities. Possesses hands-on experience in lead generation, online research, and accurate data handling using MS Office and digital tools.\n\nHighly organized and detail-oriented, with the ability to manage records, documentation, and administrative tasks efficiently. Motivated to work in a well-reputed organization where skills can be utilized effectively, professional growth can be achieved, and meaningful contributions can be made toward organizational success.";
   const aboutLines = doc.splitTextToSize(aboutMe, 170);
   aboutLines.forEach(line => {
-    if (y > 280) { // Approx page height limit
+    if (y > 280) {
       doc.addPage();
       y = 20;
     }
@@ -88,10 +88,10 @@
   doc.setFont("helvetica", "normal");
   doc.setFontSize(12);
   const skills = [
-    "- Front-End Development: HTML, CSS, Java",
-    "- Digital Marketing: Lead Generation, SEO, Social Media Strategy",
-    "- Professional Skills: Time Management, Adaptability, Teaching",
-    "- Soft Skills: Communication, Teamwork, Problem Solving"
+    "- Computer & IT Skills: MS Word, MS Excel, MS PowerPoint, AI-Assisted Tools, Internet & Email Handling",
+    "- Lead Generation & Data Management: Online Research, Lead Generation, Data Entry, LinkedIn Research",
+    "- Communication & Soft Skills: Professional Communication, Teamwork, Time Management, Problem Solving",
+    "- Basic Front-End Knowledge: HTML, CSS (Basic Level)"
   ];
   skills.forEach(skill => {
     if (y > 280) { doc.addPage(); y = 20; }
@@ -110,10 +110,10 @@
   doc.setFont("helvetica", "normal");
   doc.setFontSize(12);
   const interests = [
-    "- Web Design: Creating visually appealing and user-friendly website designs",
-    "- Technology & Innovation: Learning new technologies to solve problems",
-    "- Teaching & Mentoring: Sharing knowledge and helping others grow",
-    "- Digital Marketing Trends: Exploring modern marketing strategies and online growth techniques"
+    "- Technology & Digital Tools for Business Support",
+    "- Process Improvement & Efficient Work Practices",
+    "- Learning New Technologies & Skills Development",
+    "- Research, Data Trends & Digital Growth Strategies"
   ];
   interests.forEach(item => {
     if (y > 280) { doc.addPage(); y = 20; }
@@ -132,10 +132,9 @@
   doc.setFont("helvetica", "normal");
   doc.setFontSize(12);
   const experience = [
-    "- Government Elementary School, Lodhran | EST-CS (March 2025 - August 2025)",
-    "- Govt. Girls Elementary School, Lodhran | Punjab Govt Internship Program",
-    "- Government Girls High School, Lodhran | Secondary School Teacher (Mathematics) (Aug 2023 - Nov 2024) Taught 9th and 10th grade students, improving their problem-solving skills",
-    "- Lead Generation & Data Entry Executive: Practiced lead generation using Lead Surface, managed client data and CRM systems while handling emails and records efficiently"
+    "- STI Teacher (EST – Computer Science) | Govt. Girls Elementary School, Jalal Abad, Lodhran | Punjab Govt Internship Program | March 2025 – Present",
+    "- Secondary School Teacher (Mathematics) | Govt. Girls High School, Lodhran | Aug 2023 – Nov 2023",
+    "- Lead Generation & Data Entry Executive | Lead Surface, Lodhran | 2022 – 2024 | Conducted online lead research, data entry, and record management using spreadsheets and digital tools"
   ];
   experience.forEach(exp => {
     if (y > 280) { doc.addPage(); y = 20; }
@@ -154,12 +153,12 @@
   doc.setFont("helvetica", "normal");
   doc.setFontSize(12);
   const achievements = [
-    "- Artificial Intelligence for IT & Non-IT Professionals | Virtual University | Feb 15, 2021",
-    "- Freelancing | DigiSkills.pk (Virtual University, Ignite, Ministry of IT & Telecom) | May 18, 2021 | Batch 09",
-    "- Digital Marketing | DigiSkills.pk | May 18, 2021 | Batch 09",
-    "- The Fundamentals of Digital Marketing | Google Digital Unlocked | May 7, 2021",
-    "- Introduction to Cybersecurity | Cisco Networking Academy | May 18, 2021",
-    "- Introduction to Packet Tracer | Cisco Networking Academy | May 18, 2021"
+    "- Artificial Intelligence for IT & Non-IT Professionals | Virtual University",
+    "- Freelancing | DigiSkills.pk (Virtual University, Ignite, Ministry of IT & Telecom)",
+    "- Digital Marketing | DigiSkills.pk",
+    "- The Fundamentals of Digital Marketing | Google Digital Unlocked",
+    "- Introduction to Cybersecurity | Cisco Networking Academy",
+    "- Introduction to Packet Tracer | Cisco Networking Academy"
   ];
   achievements.forEach(item => {
     if (y > 280) { doc.addPage(); y = 20; }
@@ -178,9 +177,9 @@
   doc.setFont("helvetica", "normal");
   doc.setFontSize(12);
   const education = [
-    "- Bachelor of Science in Information Technology | BZU Multan | 2019 - 2023 | CGPA: 3.57 / 4.00",
-    "- Intermediate (Pre-Engineering) | Pins College Lodhran | 2017 - 2019 | Marks: 819 / 1100",
-    "- Matriculation (Science) | Pins School Lodhran | 2015 - 2017 | Marks: 924 / 1100"
+    "- Bachelor of Science in Information Technology | BZU Multan | 2019 – 2023 | CGPA: 3.57 / 4.00",
+    "- Intermediate (Pre-Engineering) | Pins College Lodhran | 2017 – 2019",
+    "- Matriculation (Science) | Pins School Lodhran | 2015 – 2017"
   ];
   education.forEach(item => {
     if (y > 280) { doc.addPage(); y = 20; }
@@ -199,9 +198,8 @@
   doc.setFont("helvetica", "normal");
   doc.setFontSize(12);
   const contact = [
-    "Email: eshaishfaq.it@gmail.com",
-    "LinkedIn:www.linkedin.com/in/esha-rana-045a91324",
-    
+    "Email: eshaishfaq01@gmail.com",
+    "LinkedIn: www.linkedin.com/in/esha-rana-045a91324"
   ];
   contact.forEach(item => {
     if (y > 280) { doc.addPage(); y = 20; }
@@ -209,12 +207,12 @@
     y += 6;
   });
 
-  // Save PDF
   doc.save("Esha_Ishfaq_CV.pdf");
-  }
+}
 </script>
 <script src="script.js"></script>
 
 </body>
 </html>
+
 
