--- a/portfolio.html
+++ b/portfolio.html
@@ -205,21 +205,22 @@ function generateCV() {
   doc.text("STI Teacher (EST – Computer Science)", 20, y);
   y += 6;
   doc.setFont("helvetica", "normal");
-  doc.text("Govt. Girls Elementary School, Jalal Abad, Lodhran | Punjab Govt Internship Program | March 2025 – Present", 25, y);
+  doc.text("Govt. Girls Elementary School, Jalal Abad, Lodhran | Punjab Govt Internship Program t", 25, y);
+  doc.text("March 2025 – Present",25, y);
   y += 8;
 
   doc.setFont("helvetica", "bold");
   doc.text("Secondary School Teacher (Mathematics)", 20, y);
   y += 6;
   doc.setFont("helvetica", "normal");
-  doc.text("Govt. Girls High School, Lodhran | Aug 2023 – Nov 2023", 25, y);
+  doc.text("Govt. Girls High School, Lodhran | Aug 2023 – Nov 2024", 25, y);
   y += 8;
 
   doc.setFont("helvetica", "bold");
   doc.text("Lead Generation & Data Entry Executive", 20, y);
   y += 6;
   doc.setFont("helvetica", "normal");
-  doc.text("Lead Surface, Lodhran | 2022 – 2024 | Online lead research, data entry, and record management", 25, y);
+  doc.text("Lead Surface, Lodhran | 2022 – 2024 | Online lead research and record management", 25, y);
   y += 6;
 
   /* ===== CERTIFICATIONS ===== */
@@ -300,6 +301,7 @@ function generateCV() {
 
 </body>
 </html>
+
 
 
 
