--- a/index.html
+++ b/index.html
@@ -47,172 +47,198 @@ function generateCV() {
 
   let y = 20;
 
+  /* ===== NAME ===== */
   doc.setFont("helvetica", "bold");
   doc.setFontSize(18);
   doc.text("Esha Ishfaq", 20, y);
   y += 10;
 
+  /* ===== HEADLINE ===== */
   doc.setFont("helvetica", "normal");
   doc.setFontSize(12);
   const headline = "BS Information Technology Graduate | Lead Generation & Data Entry Executive | Computer & IT Skills Professional";
   doc.text(doc.splitTextToSize(headline, 170), 20, y);
-  y += 20;
+  y += 15;
 
-  // About Me
+  /* ===== ABOUT ME ===== */
   doc.setFont("helvetica", "bold");
   doc.setFontSize(14);
-  doc.text("About Me:", 20, y);
+  doc.text("Professional Summary", 20, y);
   y += 6;
 
   doc.setFont("helvetica", "normal");
   doc.setFontSize(12);
-  const aboutMe = "A dedicated and goal-oriented Information Technology graduate with strong computer and IT skills and effective communication abilities. Possesses hands-on experience in lead generation, online research, and accurate data handling using MS Office and digital tools.\n\nHighly organized and detail-oriented, with the ability to manage records, documentation, and administrative tasks efficiently. Motivated to work in a well-reputed organization where skills can be utilized effectively, professional growth can be achieved, and meaningful contributions can be made toward organizational success.";
+  const aboutMe =
+    "A dedicated and goal-oriented Information Technology graduate with strong computer and IT skills and effective communication abilities. Possesses hands-on experience in lead generation, online research, and accurate data handling using MS Office and digital tools.\n\nHighly organized, detail-oriented, and motivated to work in a well-reputed organization where skills can be utilized efficiently, professional growth can be achieved, and meaningful contributions can be made toward organizational success.";
   const aboutLines = doc.splitTextToSize(aboutMe, 170);
   aboutLines.forEach(line => {
-    if (y > 280) {
-      doc.addPage();
-      y = 20;
-    }
+    if (y > 280) { doc.addPage(); y = 20; }
     doc.text(line, 20, y);
     y += 6;
   });
-  y += 4;
+  y += 6;
 
-  // Skills
+  /* ===== SKILLS ===== */
   if (y > 260) { doc.addPage(); y = 20; }
   doc.setFont("helvetica", "bold");
   doc.setFontSize(14);
-  doc.text("Skills:", 20, y);
+  doc.text("Skills", 20, y);
+  y += 8;
+
+  doc.setFontSize(12);
+
+  doc.setFont("helvetica", "bold");
+  doc.text("Computer & IT Skills", 20, y);
   y += 6;
 
   doc.setFont("helvetica", "normal");
-  doc.setFontSize(12);
-  const skills = [
-    "- Computer & IT Skills: MS Word, MS Excel, MS PowerPoint, AI-Assisted Tools, Internet & Email Handling",
-    "- Lead Generation & Data Management: Online Research, Lead Generation, Data Entry, LinkedIn Research",
-    "- Communication & Soft Skills: Professional Communication, Teamwork, Time Management, Problem Solving",
-    "- Basic Front-End Knowledge: HTML, CSS (Basic Level)"
+  const computerSkills = [
+    "• MS Word (Document Formatting & Typing)",
+    "• MS Excel (Data Entry, Basic Formulas)",
+    "• MS PowerPoint (Presentations)",
+    "• AI-Assisted Productivity Tools",
+    "• Internet & Email Handling",
+    "• Digital Record Keeping",
+    "• Basic IT Troubleshooting"
   ];
-  skills.forEach(skill => {
-    if (y > 280) { doc.addPage(); y = 20; }
-    doc.text(skill, 30, y);
+  computerSkills.forEach(item => {
+    doc.text(item, 25, y);
     y += 6;
   });
+
   y += 4;
 
-  // Interests
-  if (y > 260) { doc.addPage(); y = 20; }
   doc.setFont("helvetica", "bold");
-  doc.setFontSize(14);
-  doc.text("Interests:", 20, y);
+  doc.text("Communication & Soft Skills", 20, y);
   y += 6;
 
   doc.setFont("helvetica", "normal");
-  doc.setFontSize(12);
-  const interests = [
-    "- Technology & Digital Tools for Business Support",
-    "- Process Improvement & Efficient Work Practices",
-    "- Learning New Technologies & Skills Development",
-    "- Research, Data Trends & Digital Growth Strategies"
+  const softSkills = [
+    "• Clear Verbal & Written Communication",
+    "• Professional Email Writing",
+    "• Teamwork & Coordination",
+    "• Time Management",
+    "• Problem Solving",
+    "• Adaptability & Willingness to Learn",
+    "• Attention to Detail"
   ];
-  interests.forEach(item => {
-    if (y > 280) { doc.addPage(); y = 20; }
-    doc.text(item, 30, y);
+  softSkills.forEach(item => {
+    doc.text(item, 25, y);
     y += 6;
   });
-  y += 4;
 
-  // Experience
+  y += 6;
+
+  /* ===== EXPERIENCE ===== */
   if (y > 260) { doc.addPage(); y = 20; }
   doc.setFont("helvetica", "bold");
   doc.setFontSize(14);
-  doc.text("Experience:", 20, y);
+  doc.text("Experience", 20, y);
+  y += 8;
+
+  doc.setFontSize(12);
+
+  doc.setFont("helvetica", "bold");
+  doc.text("STI Teacher (EST – Computer Science)", 20, y);
+  y += 6;
+  doc.setFont("helvetica", "normal");
+  doc.text("Govt. Girls Elementary School, Jalal Abad, Lodhran | Punjab Govt Internship Program t", 25, y);
+  doc.text("March 2025 – Present",25, y);
+  y += 8;
+
+  doc.setFont("helvetica", "bold");
+  doc.text("Secondary School Teacher (Mathematics)", 20, y);
+  y += 6;
+  doc.setFont("helvetica", "normal");
+  doc.text("Govt. Girls High School, Lodhran | Aug 2023 – Nov 2024", 25, y);
+  y += 8;
+
+  doc.setFont("helvetica", "bold");
+  doc.text("Lead Generation & Data Entry Executive", 20, y);
+  y += 6;
+  doc.setFont("helvetica", "normal");
+  doc.text("Lead Surface, Lodhran | 2022 – 2024 | Online lead research and record management", 25, y);
   y += 6;
 
-  doc.setFont("helvetica", "normal");
-  doc.setFontSize(12);
-  const experience = [
-    "- STI Teacher (EST – Computer Science) | Govt. Girls Elementary School, Jalal Abad, Lodhran | Punjab Govt Internship Program | March 2025 – Present",
-    "- Secondary School Teacher (Mathematics) | Govt. Girls High School, Lodhran | Aug 2023 – Nov 2023",
-    "- Lead Generation & Data Entry Executive | Lead Surface, Lodhran | 2022 – 2024 | Conducted online lead research, data entry, and record management using spreadsheets and digital tools"
-  ];
-  experience.forEach(exp => {
-    if (y > 280) { doc.addPage(); y = 20; }
-    doc.text(exp, 30, y);
-    y += 6;
-  });
-  y += 4;
-
-  // Achievements & Certificates
+  /* ===== CERTIFICATIONS ===== */
   if (y > 260) { doc.addPage(); y = 20; }
   doc.setFont("helvetica", "bold");
   doc.setFontSize(14);
-  doc.text("Achievements & Certificates:", 20, y);
-  y += 6;
+  doc.text("Certifications", 20, y);
+  y += 8;
 
   doc.setFont("helvetica", "normal");
-  doc.setFontSize(12);
   const achievements = [
-    "- Artificial Intelligence for IT & Non-IT Professionals | Virtual University",
-    "- Freelancing | DigiSkills.pk (Virtual University, Ignite, Ministry of IT & Telecom)",
-    "- Digital Marketing | DigiSkills.pk",
-    "- The Fundamentals of Digital Marketing | Google Digital Unlocked",
-    "- Introduction to Cybersecurity | Cisco Networking Academy",
-    "- Introduction to Packet Tracer | Cisco Networking Academy"
+    "• Artificial Intelligence for IT & Non-IT Professionals | Virtual University",
+    "• Freelancing | DigiSkills.pk",
+    "• Digital Marketing | DigiSkills.pk",
+    "• Fundamentals of Digital Marketing | Google Digital Unlocked",
+    "• Introduction to Cybersecurity | Cisco Networking Academy",
+    "• Introduction to Packet Tracer | Cisco Networking Academy"
   ];
   achievements.forEach(item => {
-    if (y > 280) { doc.addPage(); y = 20; }
-    doc.text(item, 30, y);
+    doc.text(item, 25, y);
     y += 6;
   });
-  y += 4;
 
-  // Education
+  y += 6;
+
+  /* ===== EDUCATION ===== */
   if (y > 260) { doc.addPage(); y = 20; }
   doc.setFont("helvetica", "bold");
   doc.setFontSize(14);
-  doc.text("Education:", 20, y);
-  y += 6;
+  doc.text("Education", 20, y);
+  y += 8;
 
+  doc.setFont("helvetica", "bold");
+  doc.text("Bachelor of Science in Information Technology (BSIT)", 20, y);
+  y += 6;
   doc.setFont("helvetica", "normal");
-  doc.setFontSize(12);
-  const education = [
-    "- Bachelor of Science in Information Technology | BZU Multan | 2019 – 2023 | CGPA: 3.57 / 4.00",
-    "- Intermediate (Pre-Engineering) | Pins College Lodhran | 2017 – 2019",
-    "- Matriculation (Science) | Pins School Lodhran | 2015 – 2017"
-  ];
-  education.forEach(item => {
-    if (y > 280) { doc.addPage(); y = 20; }
-    doc.text(item, 30, y);
-    y += 6;
-  });
-  y += 4;
+  doc.text("BZU Multan | 2019 – 2023 | CGPA: 3.57 / 4.00", 25, y);
+  y += 8;
 
-  // Contact
+  doc.setFont("helvetica", "bold");
+  doc.text("Intermediate (Pre-Engineering)", 20, y);
+  y += 6;
+  doc.setFont("helvetica", "normal");
+  doc.text("Pins College Lodhran | 2017 – 2019 | Marks: 819 / 1100", 25, y);
+  y += 8;
+
+  doc.setFont("helvetica", "bold");
+  doc.text("Matriculation (Science)", 20, y);
+  y += 6;
+  doc.setFont("helvetica", "normal");
+  doc.text("Pins School Lodhran | 2015 – 2017 | Marks: 924 / 1100", 25, y);
+  y += 6;
+
+  /* ===== CONTACT ===== */
   if (y > 260) { doc.addPage(); y = 20; }
   doc.setFont("helvetica", "bold");
   doc.setFontSize(14);
-  doc.text("Contact:", 20, y);
-  y += 6;
+  doc.text("Contact", 20, y);
+  y += 8;
 
   doc.setFont("helvetica", "normal");
   doc.setFontSize(12);
   const contact = [
+    "Phone: 0316-7457018",
     "Email: eshaishfaq01@gmail.com",
     "LinkedIn: www.linkedin.com/in/esha-rana-045a91324"
   ];
   contact.forEach(item => {
-    if (y > 280) { doc.addPage(); y = 20; }
-    doc.text(item, 30, y);
+    doc.text(item, 25, y);
     y += 6;
   });
 
+  /* ===== SAVE ===== */
   doc.save("Esha_Ishfaq_CV.pdf");
 }
 </script>
+ 
 <script src="script.js"></script>
 
 </body>
 </html>
+
 
 
