--- a/index.html
+++ b/index.html
@@ -142,9 +142,10 @@ function generateCV() {
   doc.text("STI Teacher (EST – Computer Science)", 20, y);
   y += 6;
   doc.setFont("helvetica", "normal");
-  doc.text("Govt. Girls Elementary School, Jalal Abad, Lodhran | Punjab Govt Internship Program t", 25, y);
-  doc.text("March 2025 – Present",25, y);
-  y += 8;
+  doc.text("Govt. Girls Elementary School, Jalal Abad, Lodhran | Punjab Govt Internship Program", 25, y);
+y += 8;
+doc.text("March 2025 – Present", 25, y);
+
 
   doc.setFont("helvetica", "bold");
   doc.text("Secondary School Teacher (Mathematics)", 20, y);
@@ -239,6 +240,7 @@ function generateCV() {
 
 </body>
 </html>
+
 
 
 
