--- a/index.html
+++ b/index.html
@@ -142,11 +142,8 @@ function generateCV() {
   doc.text("STI Teacher (EST – Computer Science)", 20, y);
   y += 6;
   doc.setFont("helvetica", "normal");
-  doc.text("Govt. Girls Elementary School, Jalal Abad, Lodhran | Punjab Govt Internship Program", 25, y);
+  doc.text("GGES, Jalal Abad, Lodhran | Punjab Govt Internship Program",March 2025 – Present , 25, y);
 y += 8;
-doc.text("March 2025 – Present", 25, y);
-
-
   doc.setFont("helvetica", "bold");
   doc.text("Secondary School Teacher (Mathematics)", 20, y);
   y += 6;
@@ -240,6 +237,7 @@ doc.text("March 2025 – Present", 25, y);
 
 </body>
 </html>
+
 
 
 
