--- a/portfolio.html
+++ b/portfolio.html
@@ -205,9 +205,9 @@ function generateCV() {
   doc.text("STI Teacher (EST – Computer Science)", 20, y);
   y += 6;
   doc.setFont("helvetica", "normal");
- doc.text("Govt. Girls Elementary School, Jalal Abad, Lodhran | Punjab Govt Internship Program", 25, y);
+ doc.text("GGES, Jalal Abad, Lodhran | Punjab Govt Internship Program ,March 2025 – Present", 25, y);
 y += 8;
-doc.text("March 2025 – Present", 25, y);
+
 
 
   doc.setFont("helvetica", "bold");
@@ -302,6 +302,7 @@ doc.text("March 2025 – Present", 25, y);
 
 </body>
 </html>
+
 
 
 
