--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@ function generateCV() {
   doc.text("STI Teacher (EST – Computer Science)", 20, y);
   y += 6;
   doc.setFont("helvetica", "normal");
-  doc.text("GGES, Jalal Abad, Lodhran | Punjab Govt Internship Program",March 2025 – Present , 25, y);
+  doc.text("GGES, Jalal Abad, Lodhran | Punjab Govt Internship Program,March 2025 – Present" , 25, y);
 y += 8;
   doc.setFont("helvetica", "bold");
   doc.text("Secondary School Teacher (Mathematics)", 20, y);
@@ -237,6 +237,7 @@ y += 8;
 
 </body>
 </html>
+
 
 
 
